@@ -1,5 +1,12 @@
 <div>
   <div ng-class="$root.showTableList ? '' : 'hide-sidebar-list'">
+  	<div class="page-container" ng-show="empty">
+      <h1 class="cr-page-header">Tables</h1>  
+
+      <div class="cr-panel-block">
+        There are no tables created yet. 
+      </div>
+    </div>
     <table-list></table-list>
   </div>
   <ui-view></ui-view>
